# textual-terminal

./: .gitignore  LICENSE  README.md  pyproject.toml
textual_terminal/: __init__.py  _terminal.py
