[project]
name = "textual-terminal"
version = "0.4.0"
description = "PTY terminal widget for Textual 7.x. Fork for kagan-sh."
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.12"
authors = [
    { name = "kagan-sh", url = "https://github.com/kagan-sh" },
]
maintainers = [
    { name = "kagan-sh", url = "https://github.com/kagan-sh" },
]
keywords = ["textual", "terminal", "pty", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyte>=0.8.1,<0.9.0",
    "rich>=14.0.0",
    "textual>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/kagan-sh/textual-terminal"
Repository = "https://github.com/kagan-sh/textual-terminal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["textual_terminal"]
